# stm32-templates

./: README.md
cmake/: CMakeLists.txt
cmake/cmake/: stm32-gcc.cmake
vscode/: c_cpp_properties.json  cmake-kits.json  settings.json  tasks.json
vscode/JLink/: FlashMCU.jlink  FlashMCURelease.jlink  ReadMCU.jlink  ResetMCU.jlink
